--- a/Friends/View/ViewControllers/FriendListViewController/ListTableViewCell.xib
+++ b/Friends/View/ViewControllers/FriendListViewController/ListTableViewCell.xib
@@ -11,31 +11,31 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="62" id="KGk-i7-Jjw" customClass="ListTableViewCell" customModule="Friends" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="325" height="62"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="72" id="KGk-i7-Jjw" customClass="ListTableViewCell" customModule="Friends" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="347" height="72"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="325" height="62"/>
+                <rect key="frame" x="0.0" y="0.0" width="347" height="72"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ja4-I3-yOL">
-                        <rect key="frame" x="5" y="5" width="315" height="52"/>
+                        <rect key="frame" x="5" y="5" width="337" height="62"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="person" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="qwW-Ug-ZPe">
-                                <rect key="frame" x="5" y="6" width="50" height="40"/>
+                                <rect key="frame" x="10" y="6.5" width="50" height="49.5"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="50" id="Epx-Jl-TAb"/>
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="O1P-Cv-VTr">
-                                <rect key="frame" x="60" y="5" width="250" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <rect key="frame" x="70" y="5" width="262" height="24"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Country" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CMq-MN-2aV">
-                                <rect key="frame" x="60" y="21" width="250" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <rect key="frame" x="70" y="28" width="262" height="24"/>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
@@ -45,12 +45,12 @@
                             <constraint firstAttribute="bottom" secondItem="qwW-Ug-ZPe" secondAttribute="bottom" constant="5" id="5Fs-tS-fBG"/>
                             <constraint firstItem="O1P-Cv-VTr" firstAttribute="top" secondItem="ja4-I3-yOL" secondAttribute="top" constant="5" id="EYN-ht-DwZ"/>
                             <constraint firstAttribute="trailing" secondItem="CMq-MN-2aV" secondAttribute="trailing" constant="5" id="KF2-JU-DKh"/>
-                            <constraint firstItem="CMq-MN-2aV" firstAttribute="leading" secondItem="qwW-Ug-ZPe" secondAttribute="trailing" constant="5" id="Vf5-BX-Adh"/>
+                            <constraint firstItem="CMq-MN-2aV" firstAttribute="leading" secondItem="qwW-Ug-ZPe" secondAttribute="trailing" constant="10" id="Vf5-BX-Adh"/>
                             <constraint firstAttribute="trailing" secondItem="O1P-Cv-VTr" secondAttribute="trailing" constant="5" id="YqP-Pv-XLn"/>
                             <constraint firstAttribute="bottom" secondItem="CMq-MN-2aV" secondAttribute="bottom" constant="10" id="d3q-Sa-gTg"/>
-                            <constraint firstItem="qwW-Ug-ZPe" firstAttribute="leading" secondItem="ja4-I3-yOL" secondAttribute="leading" constant="5" id="d7m-tW-llm"/>
+                            <constraint firstItem="qwW-Ug-ZPe" firstAttribute="leading" secondItem="ja4-I3-yOL" secondAttribute="leading" constant="10" id="d7m-tW-llm"/>
                             <constraint firstItem="qwW-Ug-ZPe" firstAttribute="top" secondItem="ja4-I3-yOL" secondAttribute="top" constant="5" id="iDe-7W-Gv9"/>
-                            <constraint firstItem="O1P-Cv-VTr" firstAttribute="leading" secondItem="qwW-Ug-ZPe" secondAttribute="trailing" constant="5" id="yIO-wy-Ja7"/>
+                            <constraint firstItem="O1P-Cv-VTr" firstAttribute="leading" secondItem="qwW-Ug-ZPe" secondAttribute="trailing" constant="10" id="yIO-wy-Ja7"/>
                         </constraints>
                     </view>
                 </subviews>
@@ -67,7 +67,7 @@
                 <outlet property="nameLbl" destination="O1P-Cv-VTr" id="GCV-94-8fV"/>
                 <outlet property="personThumbImage" destination="qwW-Ug-ZPe" id="CTK-XA-GQL"/>
             </connections>
-            <point key="canvasLocation" x="141.30434782608697" y="81.026785714285708"/>
+            <point key="canvasLocation" x="157.24637681159422" y="84.375"/>
         </tableViewCell>
     </objects>
     <resources>
